--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Orientação a Objetos</title>
     <script src="JS/scripts.js"></script>
-</head>
-<body>
-    <H1>Orientação a Objetos</H1>
-</body>
+  </head>
+  <body>
+    <h1>Orientação a Objetos</h1>
+  </body>
 </html>
